selfhost/test/parser/typeidentifiers_error_misplaced_typeargs.out
Error at %FILE_NAME%:1:13
Unexpected token '<':
  |  var _: Int[]<A, B>
                 ^