selfhost/test/parser/typeidentifiers_error_misplaced_typeargs.abra
var _: Int[]<A, B>